--- a/public/ics.html
+++ b/public/ics.html
@@ -288,7 +288,7 @@
                 <button type="submit" class="btn btn-primary">
                   <i class="bi bi-save"></i> Update ICS
                 </button>
-                <button type="button" id="deleteICSButton" class="btn btn-danger">
+                <button type="button" id="deleteICSButton" class="btn btn-danger" disabled>
                   <i class="bi bi-trash"></i> Delete
                 </button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
