--- a/public/permit.html
+++ b/public/permit.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/permit.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -46,9 +47,9 @@
       </div>
 
       <!-- Toggle Button -->
-<button class="btn btn-outline-secondary btn-sm mb-2 w-auto" id="toggleFilter">
-  <i class="bi bi-eye-slash"></i> Hide Legend & Filter
-</button>
+      <button class="btn btn-outline-secondary btn-sm mb-2 w-auto" id="toggleFilter">
+        <i class="bi bi-eye-slash"></i> Hide Legend & Filter
+      </button>
 
       <!-- Filter Section -->
       <div class="mb-3" id="filterSection">
@@ -68,7 +69,22 @@
         </div>
       </div>
 
+      <!-- Pagination control -->
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <div>
+          <label for="rowsPerPage" class="form-label me-2">Rows per page:</label>
+          <select id="rowsPerPage" class="form-select d-inline-block w-auto">
+            <option value="10" selected>10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+          </select>
+        </div>
 
+        <nav aria-label="Page navigation">
+          <ul class="pagination mb-0" id="pagination"></ul>
+        </nav>
+      </div>
+      <!-- Data Table -->
       <div class="table-responsive">
         <table class="table table-bordered table-striped align-middle" id="permitTable">
           <thead class="table-primary">
@@ -89,6 +105,8 @@
           </tbody>
         </table>
       </div>
+
+
 
       <!-- Add Permit Modal -->
       <div class="modal fade" id="addPermitModal" tabindex="-1" aria-labelledby="addPermitModalLabel" aria-hidden="true">
@@ -469,6 +487,7 @@
                           <i class="bi bi-paperclip me-1"></i> Replace PDF (Optional)
                         </label>
                         <input class="form-control" type="file" id="editPdfAttachment" accept=".pdf">
+                        <input type="hidden" id="editPdfExistingUrl">
                         <div class="form-text">Upload a new PDF to replace the existing one (optional).</div>
                       </div>
 
@@ -492,7 +511,7 @@
 
           </div>
         </div>
-      </div 
+      </div>
 
     </div>
   </div>
